# Flooed

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  lint.yml
ext/: README.md  flooed.js
ext/mv2/: after.js  background.js  flooed.js  flooed_after.js  manifest.json
ext/public/: manifest.json
src/: config.rs  main.rs
src/compat/: firefox.rs
src/extra/: client_mod.rs  mod.rs  plugins.rs  rpc.rs  themes.rs
src/util/: json_helpers.rs  logger.rs  macros.rs  mod.rs  open.rs  paths.rs  process.rs  ws.rs
