[package]
name = "flooed"
version = "0.0.1"
edition = "2021"

[profile.release]
lto = true
strip = "debuginfo"

[dependencies]
chrono = { version = "0.4.34", no-default-features = true }
dirs = "5.0.1"
miniserde = "0.1.36"
notify-rust = { version = "4.10.0", no-default-features = true }
reqwest = { version = "0.11.24", features = [ "blocking" ] }
simple-websockets = "0.1.6"
sysinfo = "0.30.5"
webui-rs = { git = "https://github.com/SpikeHD/rust-webui", branch = "ext" }
